major update: migrate to spring boot 4 including dependencies, flowable 8.x